# pokemon-data-platform

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py  start.sh  stop.sh
.github/workflows/: ci.yml
database/initdb/: init.sh  schema.sql
database/migrations/versions/: 001_initial_schema.sql
docker/: Dockerfile.airflow  Dockerfile.app  docker-compose.dev.yml  docker-compose.prod.yml
docs/superpowers/specs/: 2026-06-19-pipeline-consolidation-design.md  2026-06-19-pokeapi-full-mirror-design.md
requirements/: base.txt  dev.txt  prod.txt
src/: main.py
src/analytics/: dashboard.py  stats_analyzer.py  type_analyzer.py
src/dags/: pokeapi_mirror.py  pokemon_etl.py
src/ingestion/: ability_fetcher.py  api_client.py  mirror.py  pokemon_fetcher.py  resource_fetcher.py  resources.py  type_fetcher.py
src/loading/: db_loader.py  resource_loader.py
src/models/: __init__.py  ability.py  api_resource.py  base.py  mirror.py  move.py  pokemon.py  type.py
src/transformation/: ability_transformer.py  core_transformers.py  mirror_transformers.py  pokemon_transformer.py  type_transformer.py  utils.py
tests/: test_api_client.py  test_core_transformers.py  test_mirror.py  test_model_constraints.py  test_models_package.py  test_pokemon_transformer.py  test_session.py
