[project]
name = "pokemon-data-platform"
version = "1.0.0"
description = "A data platform for collecting and analyzing Pokémon data"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }
authors = [{ name = "Pokémon Data Platform Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

# Core application runtime (ingestion, transformation, loading, API).
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "pandas>=3.0",
    "numpy>=2.3.4",
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
# Apache Airflow orchestration stack (installed in the airflow image only).
airflow = [
    "apache-airflow>=3.2.2",
    "apache-airflow-providers-postgres>=6.7.1",
    "apache-airflow-providers-common-sql>=2.0.1",
    "apache-airflow-providers-standard>=1.14.0",
    "apache-airflow-providers-fab>=3.6.0",
]
# Production serving + dashboard.
prod = [
    "gunicorn>=23.0.0",
    "streamlit>=1.58.0",
    "plotly>=6.8.0",
]

[dependency-groups]
# Development tooling — installed by default with `uv sync`.
dev = [
    "ruff>=0.15.0",
    "mypy>=1.18.2",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.0",
    "pre-commit>=4.4.0",
    "ipython>=9.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Ruff (linter + formatter; replaces black, isort, flake8, bandit) --------
[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "F",   # pycodestyle + pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "S",        # flake8-bandit (security)
]
ignore = [
    "E501",     # line length handled by the formatter
    "B008",     # FastAPI relies on Depends() in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]       # asserts are expected in tests
"src/dags/*" = ["E402"]    # Airflow DAGs set sys.path before importing src

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
